--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/colorBackground"
     android:screenOrientation="portrait"
     tools:context=".view.activities.MainActivity">
 
@@ -12,6 +11,7 @@
         android:id="@+id/constraintLayout_sectionTop"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/md_theme_dark_inverseSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.5"
@@ -52,6 +52,7 @@
         android:id="@+id/constraintLayout_sectionBottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/md_theme_light_inverseOnSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
@@ -63,9 +64,15 @@
             android:id="@+id/play_button"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="4dp"
-            android:onClick="startGameActivity"
-            android:src="@android:drawable/ic_media_play"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/ic_buttonplay"
+            android:defaultFocusHighlightEnabled="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:foregroundTintMode="screen"
+            android:hapticFeedbackEnabled="true"
+            android:onClick="playGame"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +87,7 @@
             android:text="NUOVA PARTITA"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/md_theme_dark_primaryInverse"
             android:textSize="20sp"
             android:typeface="normal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,14 +96,19 @@
 
         <ImageButton
             android:id="@+id/levels_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginStart="64dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/ic_buttonlevels"
+            android:defaultFocusHighlightEnabled="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:foregroundTintMode="screen"
+            android:hapticFeedbackEnabled="true"
             android:onClick="startLevelsActivity"
-            android:src="@android:drawable/btn_star"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/tutorial_button"
             app:layout_constraintEnd_toStartOf="@+id/settings_button"
             app:layout_constraintHorizontal_bias="0.5"
@@ -112,6 +125,7 @@
             android:text="LIVELLI"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/md_theme_dark_tertiaryContainer"
             android:textSize="15sp"
             android:typeface="normal"
             app:layout_constraintEnd_toEndOf="@+id/levels_button"
@@ -120,14 +134,19 @@
 
         <ImageButton
             android:id="@+id/settings_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginStart="64dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/ic_buttonsettings"
+            android:defaultFocusHighlightEnabled="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:foregroundTintMode="screen"
+            android:hapticFeedbackEnabled="true"
             android:onClick="startSettingsActivity"
-            android:src="@android:drawable/btn_star"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/tutorial_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -143,6 +162,7 @@
             android:text="OPZIONI"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/md_theme_dark_tertiaryContainer"
             android:textSize="15sp"
             android:typeface="normal"
             app:layout_constraintEnd_toEndOf="@+id/settings_button"
@@ -156,6 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/roboto_black"
+            android:onClick="startTutorial"
             android:text="TUTORIAL"
             app:cornerRadius="50dp"
             app:iconTint="@color/md_theme_light_primaryInverse"
