--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -10,5 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/levels_rec_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/md_theme_dark_inverseSurface"/>
 </LinearLayout>
