--- a/app/src/main/res/layout/level_card_layout.xml
+++ b/app/src/main/res/layout/level_card_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    app:cardBackgroundColor="@color/md_theme_light_surface"
+    app:cardBackgroundColor="@color/md_theme_light_inverseOnSurface"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     app:cardMaxElevation="5dp"
@@ -59,14 +59,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@id/level_name"
+            android:layout_alignParentRight="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_alignParentRight="true"
-            android:fontFamily="@font/roboto"
+            android:fontFamily="@font/roboto_black"
             android:text="LIVELLO SELEZIONATO"
-            android:textColor="@color/md_theme_dark_onPrimary"
+            android:textColor="@color/md_theme_light_tertiary"
             android:textSize="18sp"
             android:textStyle="bold"
             android:typeface="sans" />
