--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,7 +19,7 @@
     </string-array>
 
     <string-array name="levels_descriptions">
-        <item>Livello di base\nDimensione Palette: 6 Colori</item>
+        <item>Dimensione Palette: 6 Colori</item>
         <item>Dimensione Palette: 7 Colori</item>
         <item>Dimensione Palette: 8 Colori</item>
         <item>Dimensione Palette: 9 Colori</item>
@@ -37,13 +37,11 @@
     </string-array>
 
     <string-array name="grid_dim_entries">
-        <item>3 x 3</item>
-        <item>4 x 4</item>
+        <item>4 x 4 (default)</item>
         <item>5 x 5</item>
     </string-array>
 
     <string-array name="grid_dim_values">
-        <item>3</item>
         <item>4</item>
         <item>5</item>
     </string-array>
